@@ -28,7 +28,6 @@ Gem::Specification.new do |s|
   s.add_runtime_dependency 'unix_utils'
   s.add_runtime_dependency 'roo', '>=1.10.3'
 
-  s.add_development_dependency 'earth'
   s.add_development_dependency 'fuzzy_match'
   s.add_development_dependency 'lock_method'
   s.add_development_dependency 'minitest'
